Renamed to 'ol_xxx', Added ol_base and method depends on. Fixed settings/views

--- a/ol_blind_dropship/views/stock_picking.xml
+++ b/ol_blind_dropship/views/stock_picking.xml
@@ -2,9 +2,9 @@
 <odoo>
 
     <record id="view_picking_form" model="ir.ui.view">
-        <field name="name">ls_blind_dropship.picking_form_view</field>
+        <field name="name">ol_blind_dropship.picking_form_view</field>
         <field name="model">stock.picking</field>
-        <field name="inherit_id" ref="ls_base.view_picking_form" />
+        <field name="inherit_id" ref="ol_base.view_picking_form" />
         <field name="arch" type="xml">
             <xpath expr="//div[@name='information_block_div']" position="inside">
                 <field name="blind_drop_ship" invisible="1" />
