--- a/ol_stock_loadcsv/views/stock.xml
+++ b/ol_stock_loadcsv/views/stock.xml
@@ -1,7 +1,7 @@
 <odoo>
 
-    <record id="ls_csv_view_picking_form" model="ir.ui.view">
-        <field name="name">ls.csv.stock.picking.form</field>
+    <record id="ol_csv_view_picking_form" model="ir.ui.view">
+        <field name="name">ol.csv.stock.picking.form</field>
         <field name="model">stock.picking</field>
         <field name="inherit_id" ref="stock.view_picking_form" />
         <field name="arch" type="xml">
