--- a/ol_base/views/stock_picking.xml
+++ b/ol_base/views/stock_picking.xml
@@ -3,11 +3,14 @@
     <record id="view_picking_form" model="ir.ui.view">
         <field name="name">ol_base.picking_form_view</field>
         <field name="model">stock.picking</field>
-        <field name="inherit_id" ref="stock.view_picking_form"/>
+        <field name="inherit_id" ref="stock.view_picking_form" />
         <field name="arch" type="xml">
             <!-- The Notification row container -->
             <div name="button_box" position="after">
-              <div name="information_block_div" class="ls-information-block-cont"/>
+              <div
+          name="information_block_div"
+          class="ls-information-block-cont"
+        />
             </div>
 
             <!-- Add a debug page for relevant developer information -->
