--- a/ol_blind_dropship/views/res_config_settings.xml
+++ b/ol_blind_dropship/views/res_config_settings.xml
@@ -2,14 +2,22 @@
 <odoo>
 
     <record id="res_config_settings_view_form" model="ir.ui.view">
-        <field name="name">res.config.settings.view.form.inherit.ol_blind_dropship</field>
+        <field
+      name="name"
+    >res.config.settings.view.form.inherit.ol_blind_dropship</field>
         <field name="model">res.config.settings</field>
         <field name="priority" eval="30" />
         <field name="inherit_id" ref="stock.res_config_settings_view_form" />
         <field name="arch" type="xml">
             <setting id="warning_info" position="after">
-                <setting id="onlogic_stock_settings" help="Product to indicate blind drop shipping">
-                    <field name="blind_drop_ship_product_id" class="o_light_label" />
+                <setting
+          id="onlogic_stock_settings"
+          help="Product to indicate blind drop shipping"
+        >
+                    <field
+            name="blind_drop_ship_product_id"
+            class="o_light_label"
+          />
                 </setting>
             </setting>
         </field>
