--- a/ol_stock_loadcsv/views/partner.xml
+++ b/ol_stock_loadcsv/views/partner.xml
@@ -7,7 +7,10 @@
         <field name="arch" type="xml">
             <field name="type" position="before">
                 <!-- Only set via CSV import, so only show it if it's set -->
-                <field name="csv_company_name" invisible="not csv_company_name" />
+                <field
+          name="csv_company_name"
+          invisible="not csv_company_name"
+        />
             </field>
         </field>
     </record>
