--- a/ol_job_cost_estimator_tier_validation/views/sale_estimate_views.xml
+++ b/ol_job_cost_estimator_tier_validation/views/sale_estimate_views.xml
@@ -53,4 +53,8 @@
         </field>
     </record>
 
+    <record id="job_cost_estimate_customer.action_estimate_job" model="ir.actions.act_window">
+        <field name="groups_id" eval="[(4, ref('product.group_sale_pricelist'))]" />
+    </record>
+
 </odoo>
