--- a/ol_product_state/views/product_template_view.xml
+++ b/ol_product_state/views/product_template_view.xml
@@ -10,9 +10,7 @@
             </xpath>
             <field name="product_state_id" position="after">
                 <field name="has_product_state_change_group" invisible="1" />
-            </field>
-            <field name="product_state_id" position="attributes">
-                <attribute name="invisible">has_product_state_change_group</attribute>
+                <field name="product_state_id" readonly="1" widget="statusbar" invisible="has_product_state_change_group" />
             </field>
         </field>
     </record>
