--- a/ol_product_state/views/product_template_view.xml
+++ b/ol_product_state/views/product_template_view.xml
@@ -10,7 +10,7 @@
             </xpath>
             <field name="product_state_id" position="after">
                 <field name="has_product_state_change_group" invisible="1" />
-                <field name="product_state_id" readonly="1" widget="statusbar" invisible="has_product_state_change_group" />
+                <field name="product_state_id" readonly="1" widget="statusbar" invisible="has_product_state_change_group or not id" />
             </field>
         </field>
     </record>
