--- a/sale_product_approval_mrp/views/mrp_production.xml
+++ b/sale_product_approval_mrp/views/mrp_production.xml
@@ -75,7 +75,7 @@
                 position="after"
             >
                 <field
-                    name="override_exception"
+                    name="override_mo_exception"
                     groups="sales_team.group_sale_manager"
                 />
             </xpath>
