--- a/sale_product_approval_purchase/views/purchase_order.xml
+++ b/sale_product_approval_purchase/views/purchase_order.xml
@@ -26,7 +26,7 @@
             </div>
             <field name="user_id" position="after">
                 <field
-                    name="override_exception"
+                    name="override_po_exception"
                     groups="sales_team.group_sale_manager"
                 />
             </field>
