--- a/sale_product_approval_stock/views/stock_picking.xml
+++ b/sale_product_approval_stock/views/stock_picking.xml
@@ -28,7 +28,7 @@
             </div>
             <field name="move_type" position="after">
                 <field
-                    name="override_exception"
+                    name="override_stock_exception"
                     groups="sales_team.group_sale_manager"
                 />
             </field>
