[IMP] ol_job_cost_estimate_customer

--- a/ol_job_cost_estimate_customer/views/sale_estimate_views.xml
+++ b/ol_job_cost_estimate_customer/views/sale_estimate_views.xml
@@ -11,17 +11,17 @@
             <xpath
                 expr="//field[@name='estimate_ids']/tree/field[@name='product_uom']"
                 position="after">
-                <field name="customer_lead" column_invisible="0" />
+                <field name="customer_lead" optional="show" />
             </xpath>
             <xpath
                 expr="//field[@name='labour_estimate_line_ids']/tree/field[@name='product_uom']"
                 position="after">
-                <field name="customer_lead" column_invisible="1" />
+                <field name="customer_lead" optional="hide" />
             </xpath>
             <xpath
                 expr="//field[@name='overhead_estimate_line_ids']/tree/field[@name='product_uom']"
                 position="after">
-                <field name="customer_lead" column_invisible="1" />
+                <field name="customer_lead" optional="hide" />
             </xpath>
         </field>
     </record>
