--- a/sh_product_customer_code/views/product_template_views.xml
+++ b/sh_product_customer_code/views/product_template_views.xml
@@ -100,7 +100,7 @@
         <field name="model">product.template</field>
         <field name="inherit_id" ref="product.product_template_search_view" />
         <field name="arch" type="xml">
-            <field name="name" position="before">
+            <field name="categ_id" position="after">
                 <field name="code_id" string="Customer Product Code" />
                 <field name="product_code_name" string="Customer Product Name" />
             </field>
