[IMP] ol_purchase_request_estimate

--- a/ol_purchase_request_estimate/views/sale_estimate_views.xml
+++ b/ol_purchase_request_estimate/views/sale_estimate_views.xml
@@ -29,6 +29,9 @@
                     groups="purchase_request.group_purchase_request_user"
                 />
             </xpath>
+            <xpath expr="//field[@name='product_description']" position="after">
+                <field name="specifications" optional="show" />
+            </xpath>
         </field>
     </record>
 
