--- a/ol_product_configurator/views/attribute_value_views.xml
+++ b/ol_product_configurator/views/attribute_value_views.xml
@@ -6,7 +6,7 @@
         <field name="inherit_id" ref="product_configurator.product_attribute_value_form_view" />
         <field name="arch" type="xml">
             <xpath expr="//group//group//field[@name='product_id']" position="before">
-                <field name="company_id" />
+                <field name="company_ids" widget="many2many_tags"/>
             </xpath>
         </field>
     </record>
@@ -18,7 +18,7 @@
         <field name="inherit_id" ref="product.product_attribute_value_list" />
         <field name="arch" type="xml">
             <field name="name" position="after">
-                <field name="company_id" />
+                <field name="company_ids" widget="many2many_tags"/>
             </field>
         </field>
     </record>
