--- a/ol_product_configurator/views/product_template_attribute_value_views.xml
+++ b/ol_product_configurator/views/product_template_attribute_value_views.xml
@@ -8,7 +8,7 @@
         <field name="arch" type="xml">
             <field name="price_extra" position="after">
             	<field name="product_id" />
-                <field name="company_id" />
+                <field name="company_ids"  widget="many2many_tags"/>
             </field>
         </field>
     </record>
